--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home Page
 ---
 
 <div id="home">
-    <div class="header">
+    <div class="header angle--bottom-right">
         <div class="header-title logo">
             auToDo
         </div>
