Move to sass version of skeleton

--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@ title: Home Page
 ---
 
 <div id="home">
-    <div class="header angle--bottom-right">
-        <div class="header-title logo">
-            auToDo
+    <div class="header angle--bottom-right section hero">
+        <div class="container">
+            <div class="row">
+                <div class="header-title logo one-half column">
+                    auToDo
+                </div>
+                <div class="logo one-half column phones">
+                    <img class="phone" src="assets/screenshot.jpg"></img>
+                    <img class="phone" src="assets/screenshot.jpg"></img>
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="section">
+        here
     </div>
 </div>
