Basic nav bar added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@ title: Home Page
 ---
 
 <div id="home">
+    <div class="topnav">
+        <div class="container">
+            <div class="row">
+                <div class="one-half column"> 
+                    <a class="active logo left" href="#home">auToDo</a>
+                </div>
+                <div class="one-half column right"> 
+                    <!-- Float right causes these to display in reverse order -->
+                    <a href="#contact">Contact</a>
+                    <a href="/blog">Blog</a>
+                    <a href="#download">Download</a>
+                    <a href="#features">Features</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="header angle--bottom-right section hero">
         <div class="container">
             <div class="row">
@@ -17,7 +33,50 @@ title: Home Page
             </div>
         </div>
     </div>
-    <div class="section">
-        here
+    <div id="features" class="section">
+        <div class="container">
+            <div class="row">
+                <div class="one-third column">
+                    <i class="fas fa-clipboard-check"></i>
+                    track your car's maintenance
+                </div>
+                <div class="one-third column">
+                    here
+                </div>
+                <div class="one-third column">
+                    here
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section section-gray">
+        <div class="container">
+            <div class="row">
+                Very basic walkthrough of sign-up/creating new tasks
+            </div>
+        </div>
+    </div>
+    <div id="download" class="section">
+        <div class="container">
+            <div class="row">
+                <div class="one-third column">
+                    <i class="fas fa-clipboard-check"></i>
+                    track your car's maintenance
+                </div>
+                <div class="one-third column">
+                    here
+                </div>
+                <div class="one-third column">
+                    Shared source thing? link to github?
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="contact" class="section section-green">
+        <div class="container">
+            <div class="row">
+                Contact info?
+            </div>
+        </div>
     </div>
 </div>
