--- a/index.html
+++ b/index.html
@@ -23,8 +23,17 @@ title: Home Page
     <div class="header angle--bottom-right section hero">
         <div class="container">
             <div class="row">
-                <div class="header-title logo one-half column">
-                    auToDo
+                <div class="header-title one-half column">
+                    <div class="logo">
+                        auToDo
+                    </div>
+                    </br>
+                    <div class="subtitle">
+                        Car Maintenance Made Simple.
+                    </div>
+                    <div class="play-link">
+                        <a href='https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+                    </div>
                 </div>
                 <div class="logo one-half column phones">
                     <img class="phone" src="assets/screenshot.jpg"></img>
