decent start to contact/downloads sections

--- a/index.html
+++ b/index.html
@@ -65,26 +65,36 @@ title: Home Page
             </div>
         </div>
     </div>
-    <div id="download" class="section">
-        <div class="container">
-            <div class="row">
-                <div class="one-third column">
-                    <i class="fas fa-clipboard-check"></i>
-                    track your car's maintenance
+    <div id="download">
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <h2>It's free, so give it a shot!</h1>
                 </div>
-                <div class="one-third column">
-                    here
-                </div>
-                <div class="one-third column">
-                    Shared source thing? link to github?
+                <div class="row">
+                    <div class="play-link">
+                        <a href='https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+                    </div>
                 </div>
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+            <path d="M 0 20 C 0 20, 20 60, 40 20 S 70 50, 100 0 V 100 H 0 Z" fill="#4cc8a7" stroke="transparent"/>
+        </svg>
     </div>
     <div id="contact" class="section section-green">
         <div class="container">
             <div class="row">
-                Contact info?
+                <p><a href="/privacy-policy/">Privacy Policy</a></p>
+            </div>
+            <div class="row">
+                <p>Built with <i class="fa fa-heart"></i> by Jonathan Bayless.</p>
+            </div>
+            <div class="row">
+                <p><i class="fa fa-envelope"></i> <a href="mailto:contact@autodo.app">Email</a></p>
+            </div>
+            <div class="row">
+                <p>© 2019</p>
             </div>
         </div>
     </div>
