Add material icons set bc font awesome is missing a lot

--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@ title: Home Page
         <div class="container">
             <div class="row">
                 <div class="one-third column">
-                    <i class="fas fa-clipboard-check"></i>
-                    track your car's maintenance
+                    <i class="material-icons md-48">done</i>
+                    <p>track your car's maintenance</p>
                 </div>
                 <div class="one-third column">
-                    here
+                    <i class="material-icons md-48">autorenew</i>
+                    <p>here</p>
                 </div>
                 <div class="one-third column">
-                    here
+                    <i class="material-icons md-48">local_gas_station</i>
+                    <p>here</p>
                 </div>
             </div>
         </div>
