got that group of three key points

--- a/index.html
+++ b/index.html
@@ -46,16 +46,20 @@ title: Home Page
         <div class="container">
             <div class="row">
                 <div class="one-third column">
-                    <i class="material-icons md-48">done</i>
-                    <p>track your car's maintenance</p>
+                    <p><i class="material-icons md-60">alarm</i></p>
+                    <h4>Task Reminders</h4>
+                    <p>Get reminders for your car's routine maintenance that are persistent without being annoying.</p>
+                    <p>You can modify these reminder settings as much as you'd like to fit your definition of annoying.</p>
                 </div>
                 <div class="one-third column">
-                    <i class="material-icons md-48">autorenew</i>
-                    <p>here</p>
+                    <p><i class="material-icons md-60">autorenew</i></p>
+                    <h4>Set Once and Forget It</h4>
+                    <p>A set of common tasks are configured to autorenew by default and you can add your own tasks to repeat.</p>
                 </div>
                 <div class="one-third column">
-                    <i class="material-icons md-48">local_gas_station</i>
-                    <p>here</p>
+                    <p><i class="material-icons md-60">local_gas_station</i></p>
+                    <h4>Own Your Car's Data</h4>
+                    <p>Tracking your car's refuelings will better predict your maintenance task due dates as well as giving a wealth of statistics on your car's expenses and use.</p>
                 </div>
             </div>
         </div>
