Added proper phone mockups

--- a/index.html
+++ b/index.html
@@ -20,27 +20,33 @@ title: Home Page
             </div>
         </div>
     </div>
-    <div class="header angle--bottom-right section hero">
-        <div class="container">
-            <div class="row">
-                <div class="header-title one-half column">
-                    <div class="logo">
-                        auToDo
+    <!-- <div class="header angle--bottom-right section hero"> -->
+    <div id="header" class="header">
+        <div class="section hero">
+            <div class="container">
+                <div class="row">
+                    <div class="header-title one-half column">
+                        <div class="logo">
+                            auToDo
+                        </div>
+                        </br>
+                        <div class="subtitle">
+                            Car Maintenance Made Simple.
+                        </div>
+                        <div class="play-link">
+                            <a href='https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+                        </div>
                     </div>
-                    </br>
-                    <div class="subtitle">
-                        Car Maintenance Made Simple.
+                    <div class="logo one-half column phones">
+                        <img class="phone" src="assets/pixelscreenshot.png"></img>
+                        <img class="phone" src="assets/iphonexscreenshot.png"></img>
                     </div>
-                    <div class="play-link">
-                        <a href='https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
-                    </div>
-                </div>
-                <div class="logo one-half column phones">
-                    <img class="phone" src="assets/screenshot.jpg"></img>
-                    <img class="phone" src="assets/screenshot.jpg"></img>
                 </div>
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+            <path d="M 0 60 C 0 60, 20 80, 40 30 S 70 70, 100 0 V 100 H 0 Z" fill="#eee" stroke="transparent"/>
+        </svg>
     </div>
     <div id="features" class="section">
         <div class="container">
