carousel/walkthrough is mostly set up

--- a/index.html
+++ b/index.html
@@ -72,8 +72,62 @@ title: Home Page
     </div>
     <div class="section section-gray">
         <div class="container">
-            <div class="row">
-                Very basic walkthrough of sign-up/creating new tasks
+            <div class="row vert-align">
+                <div class="one-third column ">
+                    <p><span class="emphasized">auToDo</span> is designed to give you <span class="emphasized">control</span> over your car's maintenance.</p>
+                    <br>
+                    <p>Statistics on your car and its maintenance gives you the information you need to know how your car is performing, and the ability to easily create recurring tasks means <span class="emphasized">you don't have to worry about forgetting a task again.</span></p>
+                    <br>
+                    <p><span class="emphasized">Embrace the simplicity of keeping track of your car with auToDo.</span></p>
+                </div>
+                <div class="two-thirds column carousel-container">
+                    <div class="slider-wrapper">
+                        <div class="slider">
+                            <input type="radio" name="slider" class="trigger" id="one" checked="true"/>
+                            <div class="slide">
+                                <figure class="slide-figure">
+                                    <img class="slide-img" src="/assets/pixel1.png" />
+                                    <figcaption class="slide-caption"><p>Get <span class="emphasized">insightful statistics</span> about your car's fuel efficiency and your driving habits as you add more completed tasks and recorded refuelings.</p></figcaption>
+                                </figure>
+                            </div>
+                            <input type="radio" name="slider" class="trigger" id="two" />
+                            <div class="slide">
+                                <figure class="slide-figure">
+                                    <img class="slide-img" src="/assets/pixel2.png" />
+                                    <figcaption class="slide-caption"><p>auToDo adds a set of common routine maintenance tasks by default, all of which recur on a mileage interval that you control. You can add add and remove tasks from this set of defaults to <span class="emphasized">match the exact needs of your vehicle.</span></p></figcaption>
+                                </figure>
+                            </div>
+                            <input type="radio" name="slider" class="trigger" id="three" />
+                            <div class="slide">
+                                <figure class="slide-figure">
+                                    <img class="slide-img" src="/assets/pixel3.png" />
+                                    <figcaption class="slide-caption"><p>In addition to the Statistics tab, you can view a log of your <span class="emphasized">recorded refuelings</span> along with statistics about each particular entry.</p></figcaption>
+                                </figure>
+                            </div>
+                            <input type="radio" name="slider" class="trigger" id="four" />
+                            <div class="slide">
+                                <figure class="slide-figure">
+                                    <img class="slide-img" src="/assets/pixel4.png" />
+                                    <figcaption class="slide-caption"><p><span class="emphasized">Creating a standalone ToDo item is a breeze</span>. Just enter the name and due date (or mileage) of the action and associate it with any or all of your vehicles.</p></figcaption>
+                                </figure>
+                            </div>
+                            <input type="radio" name="slider" class="trigger" id="five" />
+                            <div class="slide">
+                                <figure class="slide-figure">
+                                    <img class="slide-img" src="/assets/pixel5.png" />
+                                    <figcaption class="slide-caption"><p>auToDo is tailored for <span class="emphasized">easily recording refuelings</span>, you can input lots of information if you want detailed statistics, or just a bit about the car's current mileage to update the Due Date predictions.</p></figcaption>
+                                </figure>
+                            </div>
+                        </div>
+                        <ul class="slider-nav">
+                            <li class="slider-nav__item"><label class="slider-nav__label" for="one"></label></li>
+                            <li class="slider-nav__item"><label class="slider-nav__label" for="two"></label></li>
+                            <li class="slider-nav__item"><label class="slider-nav__label" for="three"></label></li>
+                            <li class="slider-nav__item"><label class="slider-nav__label" for="four"></label></li>
+                            <li class="slider-nav__item"><label class="slider-nav__label" for="five"></label></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
