--- a/index.html
+++ b/index.html
@@ -142,6 +142,26 @@ title: Home Page
                         <a href='https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
                     </div>
                 </div>
+                <hr style="margin-top: 1rem;"> ,<!-- used to account for play store button above-->
+                <div class="row">
+                    <h5>Has the app changed your life, or driven you to a righteous fury about car maintenance?</h5>
+                </div>
+                <div class="row vert-align">
+                    <div class="one-third column">
+                        <p>
+                            <b>Please let us know at:</b>
+                        </p>
+                    </div>
+                    <div class="two-thirds column"> 
+                        <p>
+                            <ul>
+                                <li>Our <a href="https://github.com/autodo-app/autodo/issues/new">Github</a>, where the app's code lives</li>
+                                <li>The <a href="https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">reviews section</a> of one of the app stores (ideally one with our app in it)</li>
+                                <li>The <a href="mailto:contact@autodo.app">email address</a> of our lovely dev team</li>
+                            </ul>
+                        </p>
+                    </div>   
+                </div>
             </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
@@ -160,7 +180,7 @@ title: Home Page
                 <p><i class="fa fa-envelope"></i> <a href="mailto:contact@autodo.app">Email</a></p>
             </div>
             <div class="row">
-                <p>© 2019</p>
+                <p>© 2020</p>
             </div>
         </div>
     </div>
