--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ title: Home Page
                 </div>
                 <hr style="margin-top: 1rem;"> ,<!-- used to account for play store button above-->
                 <div class="row">
-                    <h5>Has the app changed your life, or driven you to a righteous fury about car maintenance?</h5>
+                    <h5>Has the app changed your life or driven you to a righteous fury about car maintenance?</h5>
                 </div>
                 <div class="row vert-align">
                     <div class="one-third column">
