--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ title: Home Page
     <div id="contact" class="section section-green">
         <div class="container">
             <div class="row">
-                <p><a href="/privacy-policy/">Privacy Policy</a></p>
+                <p><a href="/privacy-policy/">Privacy Policy</a>     |     <a href="/branding/">Branding</a></p>
             </div>
             <div class="row">
                 <p>Built with <i class="fa fa-heart"></i> by Jonathan Bayless.</p>
