emphasize the download button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ title: Home Page
                 </div>
                 <div class="one-half column right"> 
                     <!-- Float right causes these to display in reverse order -->
+                    <a class="download-button" href="#download">Download</a>
                     <a href="#contact">Contact</a>
                     <a href="/blog">Blog</a>
-                    <a href="#download">Download</a>
                     <a href="#features">Features</a>
                 </div>
             </div>
