--- a/index.html
+++ b/index.html
@@ -55,17 +55,16 @@ title: Home Page
                     <p><i class="material-icons md-60">alarm</i></p>
                     <h4>Task Reminders</h4>
                     <p>Get reminders for your car's routine maintenance that are persistent without being annoying.</p>
-                    <p>You can modify these reminder settings as much as you'd like to fit your definition of annoying.</p>
                 </div>
                 <div class="one-third column">
                     <p><i class="material-icons md-60">autorenew</i></p>
                     <h4>Set Once and Forget It</h4>
-                    <p>A set of common tasks are configured to autorenew by default and you can add your own tasks to repeat.</p>
+                    <p>Create a repeating task and auToDo will help make sure you never forget it again.</p>
                 </div>
                 <div class="one-third column">
                     <p><i class="material-icons md-60">local_gas_station</i></p>
                     <h4>Own Your Car's Data</h4>
-                    <p>Tracking your car's refuelings will better predict your maintenance task due dates as well as giving a wealth of statistics on your car's expenses and use.</p>
+                    <p>Every time you log a refueling of your car <b>your</b> repeating tasks get more accurate notifications.</p>
                 </div>
             </div>
         </div>
@@ -78,7 +77,7 @@ title: Home Page
                     <br>
                     <p>Statistics on your car and its maintenance gives you the information you need to know how your car is performing, and the ability to easily create recurring tasks means <span class="emphasized">you don't have to worry about forgetting a task again.</span></p>
                     <br>
-                    <p><span class="emphasized">Embrace the simplicity of keeping track of your car with auToDo.</span></p>
+                    <p>Embrace the <span class="emphasized">simplicity</span> of keeping track of your car with auToDo.</p>
                 </div>
                 <div class="two-thirds column carousel-container">
                     <div class="slider-wrapper">
