--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: Home Page
                             Car Maintenance Made Simple.
                         </div>
                         <div class="play-link">
-                            <a href='https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+                            <a href='https://play.google.com/apps/testing/com.jonathanbayless.autodo'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
                         </div>
                     </div>
                     <div class="logo one-half column phones">
