Add ios screenshots

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ title: Home Page
                         </div>
                     </div>
                     <div class="logo one-half column phones">
+                        <img class="phone" src="assets/homescreen_ios.png"></img>
                         <img class="phone" src="assets/pixelscreenshot.png"></img>
-                        <img class="phone" src="assets/iphonexscreenshot.png"></img>
                     </div>
                 </div>
             </div>
