--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ title: Home Page
                 </span>
                 <span class="right">
                     <a class="download-button" href="#download">Download</a>
-                    <a href="#contact">Contact</a>
+                    <a href="#contact" class="hide-sm">Contact</a>
                     <a href="/blog">Blog</a>
-                    <a href="#features">Features</a>
+                    <a href="#features" class="hide-sm">Features</a>
                 </span>
             </div>
         </div>
