--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Home Page
                 <div class="row">
                     <div class="header-title one-half column">
                         <div class="logo">
-                            auToDo
+                            <h1 class="logo">auToDo</h1>
                         </div>
                         </br>
                         <div class="subtitle">
@@ -38,8 +38,8 @@ title: Home Page
                         </div>
                     </div>
                     <div class="logo one-half column phones">
-                        <img class="phone" src="assets/homescreen_ios.png"></img>
-                        <img class="phone" src="assets/pixelscreenshot.png"></img>
+                        <img class="phone" src="assets/homescreen_ios.png" alt="Screenshot of auToDo on iOS"></img>
+                        <img class="phone" src="assets/pixelscreenshot.png" alt="Screenshot of auToDo on Android"></img>
                     </div>
                 </div>
             </div>
@@ -85,32 +85,32 @@ title: Home Page
                             <input type="radio" name="slider" class="trigger" id="one" checked="true"/>
                             <div class="slide">
                                 <figure class="slide-figure">
-                                    <img class="slide-img" src="/assets/pixel1.png" />
+                                    <img class="slide-img" src="/assets/pixel1.png" alt="Screenshot of auToDo's Statistics page"/>
                                     <figcaption class="slide-caption"><p>Get <span class="emphasized">insightful statistics</span> about your car's fuel efficiency and your driving habits as you add more completed tasks and recorded refuelings.</p></figcaption>
                                 </figure>
                             </div>
                             <input type="radio" name="slider" class="trigger" id="two" />
                             <div class="slide">
                                 <figure class="slide-figure">
-                                    <img class="slide-img" src="/assets/pixel2.png" />
+                                    <img class="slide-img" src="/assets/pixel2.png" alt="Screenshot of auToDo's Repeating page"/>
                                     <figcaption class="slide-caption"><p>auToDo adds a set of common routine maintenance tasks by default, all of which recur on a mileage interval that you control. You can add add and remove tasks from this set of defaults to <span class="emphasized">match the exact needs of your vehicle.</span></p></figcaption>
                                 </figure>
                             </div>
                             <input type="radio" name="slider" class="trigger" id="three" />
                             <div class="slide">
                                 <figure class="slide-figure">
-                                    <img class="slide-img" src="/assets/pixel3.png" />
+                                    <img class="slide-img" src="/assets/pixel3.png" alt="Screenshot of auToDo's Refuelings page"/>
                                     <figcaption class="slide-caption"><p>In addition to the Statistics tab, you can view a log of your <span class="emphasized">recorded refuelings</span> along with statistics about each particular entry.</p></figcaption>
                                 </figure>
                             </div>
-                            <input type="radio" name="slider" class="trigger" id="four" />
+                            <input type="radio" name="slider" class="trigger" id="four" alt="Screenshot of auToDo's New ToDo page"/>
                             <div class="slide">
                                 <figure class="slide-figure">
                                     <img class="slide-img" src="/assets/pixel4.png" />
                                     <figcaption class="slide-caption"><p><span class="emphasized">Creating a standalone ToDo item is a breeze</span>. Just enter the name and due date (or mileage) of the action and associate it with any or all of your vehicles.</p></figcaption>
                                 </figure>
                             </div>
-                            <input type="radio" name="slider" class="trigger" id="five" />
+                            <input type="radio" name="slider" class="trigger" id="five" alt="Screenshot of auToDo's New Refueling page"/>
                             <div class="slide">
                                 <figure class="slide-figure">
                                     <img class="slide-img" src="/assets/pixel5.png" />
