--- a/index.html
+++ b/index.html
@@ -70,62 +70,37 @@ title: Home Page
         </div>
     </div>
     <div class="section section-gray">
-        <div class="container">
+        <div class="container feature-screenshots">
             <div class="row vert-align">
-                <div class="one-third column ">
-                    <p><span class="emphasized">auToDo</span> is designed to give you <span class="emphasized">control</span> over your car's maintenance.</p>
-                    <br>
-                    <p>Statistics on your car and its maintenance gives you the information you need to know how your car is performing, and the ability to easily create recurring tasks means <span class="emphasized">you don't have to worry about forgetting a task again.</span></p>
-                    <br>
-                    <p>Embrace the <span class="emphasized">simplicity</span> of keeping track of your car with auToDo.</p>
+                <div class="one-third column">
+                    <img class="feature-screenshot" src="/assets/pixel-stats.png" alt="Screenshot of auToDo's Statistics page"/>
                 </div>
-                <div class="two-thirds column carousel-container">
-                    <div class="slider-wrapper">
-                        <div class="slider">
-                            <input type="radio" name="slider" class="trigger" id="one" checked="true"/>
-                            <div class="slide">
-                                <figure class="slide-figure">
-                                    <img class="slide-img" src="/assets/pixel1.png" alt="Screenshot of auToDo's Statistics page"/>
-                                    <figcaption class="slide-caption"><p>Get <span class="emphasized">insightful statistics</span> about your car's fuel efficiency and your driving habits as you add more completed tasks and recorded refuelings.</p></figcaption>
-                                </figure>
-                            </div>
-                            <input type="radio" name="slider" class="trigger" id="two" />
-                            <div class="slide">
-                                <figure class="slide-figure">
-                                    <img class="slide-img" src="/assets/pixel2.png" alt="Screenshot of auToDo's Repeating page"/>
-                                    <figcaption class="slide-caption"><p>auToDo adds a set of common routine maintenance tasks by default, all of which recur on a mileage interval that you control. You can add add and remove tasks from this set of defaults to <span class="emphasized">match the exact needs of your vehicle.</span></p></figcaption>
-                                </figure>
-                            </div>
-                            <input type="radio" name="slider" class="trigger" id="three" />
-                            <div class="slide">
-                                <figure class="slide-figure">
-                                    <img class="slide-img" src="/assets/pixel3.png" alt="Screenshot of auToDo's Refuelings page"/>
-                                    <figcaption class="slide-caption"><p>In addition to the Statistics tab, you can view a log of your <span class="emphasized">recorded refuelings</span> along with statistics about each particular entry.</p></figcaption>
-                                </figure>
-                            </div>
-                            <input type="radio" name="slider" class="trigger" id="four" alt="Screenshot of auToDo's New ToDo page"/>
-                            <div class="slide">
-                                <figure class="slide-figure">
-                                    <img class="slide-img" src="/assets/pixel4.png" />
-                                    <figcaption class="slide-caption"><p><span class="emphasized">Creating a standalone ToDo item is a breeze</span>. Just enter the name and due date (or mileage) of the action and associate it with any or all of your vehicles.</p></figcaption>
-                                </figure>
-                            </div>
-                            <input type="radio" name="slider" class="trigger" id="five" alt="Screenshot of auToDo's New Refueling page"/>
-                            <div class="slide">
-                                <figure class="slide-figure">
-                                    <img class="slide-img" src="/assets/pixel5.png" />
-                                    <figcaption class="slide-caption"><p>auToDo is tailored for <span class="emphasized">easily recording refuelings</span>, you can input lots of information if you want detailed statistics, or just a bit about the car's current mileage to update the Due Date predictions.</p></figcaption>
-                                </figure>
-                            </div>
-                        </div>
-                        <ul class="slider-nav">
-                            <li class="slider-nav__item"><label class="slider-nav__label" for="one"></label></li>
-                            <li class="slider-nav__item"><label class="slider-nav__label" for="two"></label></li>
-                            <li class="slider-nav__item"><label class="slider-nav__label" for="three"></label></li>
-                            <li class="slider-nav__item"><label class="slider-nav__label" for="four"></label></li>
-                            <li class="slider-nav__item"><label class="slider-nav__label" for="five"></label></li>
-                        </ul>
-                    </div>
+                <div class="two-thirds column">
+                    <p>Statistics on your car and its maintenance gives you the information you need to know how your car is performing, and the ability to easily create recurring tasks means <span class="emphasized">you don't have to worry about forgetting a task again.</span></p>
+                </div>
+            </div>
+            <div class="row vert-align">
+                <div class="two-thirds column">
+                    <p>auToDo adds a set of common routine maintenance tasks by default, all of which recur on a mileage interval that you control. You can add add and remove tasks from this set of defaults to <span class="emphasized">match the exact needs of your vehicle.</span></p>
+                </div>
+                <div class="one-third column feature-screenshot">
+                    <img class="feature-screenshot" src="/assets/pixel-repeats.png" alt="Screenshot of auToDo's Repeats page"/>
+                </div>
+            </div>
+            <div class="row vert-align">
+                <div class="one-third column feature-screenshot">
+                    <img class="feature-screenshot" src="/assets/pixel-refuelings.png" alt="Screenshot of auToDo's Refuelings page"/>
+                </div>
+                <div class="two-thirds column">
+                    <p>In addition to the Statistics tab, you can view a log of your <span class="emphasized">recorded refuelings</span> along with statistics about each particular entry.</p>
+                </div>
+            </div>
+            <div class="row vert-align">
+                <div class="two-thirds column">
+                    <p><span class="emphasized">Creating a standalone ToDo item is a breeze</span>. Just enter the name and due date (or mileage) of the action and associate it with any or all of your vehicles.</p>
+                </div>
+                <div class="one-third column feature-screenshot">
+                    <img class="feature-screenshot" src="/assets/pixel-new-todo.png" alt="Screenshot of auToDo's New ToDo page"/>
                 </div>
             </div>
         </div>
