--- a/index.html
+++ b/index.html
@@ -139,46 +139,6 @@ title: Home Page
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
-            <path d="M 0 20 C 0 20, 20 60, 40 20 S 70 50, 100 0 V 100 H 0 Z" fill="#4cc8a7" stroke="transparent"/>
-        </svg>
     </div>
-    <div id="contact" class="section section-green">
-        <div class="container">
-            <div class="row">
-                <div class="columns three">
-                    <h5>Connect</h5>
-                    <p>
-                        <a href="/blog/">Blog</a></br>
-                        <a href="https://github.com/autodo-app/autodo">Github</a></br>
-                        <a href="https://twitter.com/auToDoApp">Twitter</a></br>
-                        <a href="https://www.instagram.com/autodoapp/">Instagram</a>
-                    </p>
-                </div>
-                <div class="columns three">
-                    <h5>Help</h5>
-                    <p>
-                        <a href="/faq/">FAQ</a></br>
-                        <a href="mailto:contact@autodo.app">Email</a>
-                    </p>
-                </div>
-                <div class="columns three">
-                    <h5>Legal</h5>
-                    <p>
-                        <a href="/privacy-policy/">Privacy Policy</a></br>
-                    </p>
-                </div>
-                <div class="columns three">
-                    <h5>About</h5>
-                    <p>
-                        <a href="/about/">The Devs</a></br>
-                        <a href="/branding/">Branding</a>
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <p>© 2020</p>
-            </div>
-        </div>
-    </div>
+    {% include footer-minima.html %}
 </div>
