--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 layout: default
 title: Home Page
 ---
+<script async src="/assets/js/cookie-popup.js"></script>
+<div id="cookie-banner" class="cookie-banner hide">
+	<span>By using our website, you agree to our <a href="/cookie-policy/">cookie policy.</a></span>
+	<button id="close" class="close">&times;</button>
+</div>
 
 <div id="home">
     <div class="topnav">
