use com.autodo.autodo play store link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: Home Page
                             Car Maintenance Made Simple.
                         </div>
                         <div class="play-link">
-                            <a class="appstore-link" href='https://play.google.com/apps/testing/com.jonathanbayless.autodo'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+                            <a class="appstore-link" href='https://play.google.com/apps/testing/com.autodo.autodo'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
                             <a class="appstore-link" href="https://testflight.apple.com/join/enyNH94Q"><img class='appstore-link' alt='Download from the App Store' src='assets/appstorebadge.svg'/></a>
                         </div>
                     </div>
@@ -118,7 +118,7 @@ title: Home Page
                 </div>
                 <div class="row">
                     <div class="play-link">
-                        <a class="appstore-link" href='https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
+                        <a class="appstore-link" href='https://play.google.com/store/apps/details?id=com.autodo.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
                         <a class="appstore-link" href="https://testflight.apple.com/join/enyNH94Q"><img class='appstore-link' alt='Download from the App Store' src='assets/appstorebadge.svg'/></a>
                     </div>
                 </div>
@@ -136,7 +136,7 @@ title: Home Page
                         <p>
                             <ul>
                                 <li>Our <a href="https://github.com/autodo-app/autodo/issues/new">Github</a>, where the app's code lives</li>
-                                <li>The <a href="https://play.google.com/store/apps/details?id=com.jonathanbayless.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">reviews section</a> of one of the app stores (ideally one with our app in it)</li>
+                                <li>The <a href="https://play.google.com/store/apps/details?id=com.autodo.autodo&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">reviews section</a> of one of the app stores (ideally one with our app in it)</li>
                                 <li>The <a href="mailto:contact@autodo.app">email address</a> of our lovely dev team</li>
                             </ul>
                         </p>
