--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 layout: default
 title: Home Page
 ---
+
+<script>
+    function showMailingPopUp() {
+        require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us4.list-manage.com","uuid":"7752bab61731f22b9456d381a","lid":"7b05f54ee4","uniqueMethods":true}) })
+        document.cookie = "MCPopupClosed=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
+    };
+    document.getElementById("open-popup").onclick = function() {showMailingPopUp()};
+</script>
+
 <script async src="/assets/js/cookie-popup.js"></script>
 <div id="cookie-banner" class="cookie-banner hide">
 	<span>By using our website, you agree to our <a href="/cookie-policy/">cookie policy.</a></span>
@@ -24,7 +33,6 @@ title: Home Page
             </div>
         </div>
     </div>
-    <!-- <div class="header angle--bottom-right section hero"> -->
     <div id="header" class="header">
         <div class="section hero">
             <div class="container">
@@ -40,6 +48,11 @@ title: Home Page
                         <div class="play-link">
                             <a class="appstore-link" href='https://play.google.com/apps/testing/com.autodo.autodo'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/></a>
                             <a class="appstore-link" href="https://testflight.apple.com/join/enyNH94Q"><img class='appstore-link' alt='Download from the App Store' src='assets/appstorebadge.svg'/></a>
+                        </div>
+                        <div class="mailing-list">
+                            auToDo is currently in Beta.</br>
+                            Get notified when the 1.0 version is ready!</br>
+                            <button id="open-popup">Subscribe</button>
                         </div>
                     </div>
                     <div class="logo one-half column phones">
