got home page working

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 ---
 layout: default
 ---
+
+<script async src="/assets/js/cookie-popup.js"></script>
+<div id="cookie-banner" class="cookie-banner hide">
+	<span>By using our website, you agree to our <a href="/cookie-policy/">cookie policy.</a></span>
+	<button id="close" class="close">&times;</button>
+</div>
